# umphreys-vault

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements.in
migrations/: 001_initial.sql  002_x_setlist_staging.sql
src/umphreys_vault/: __init__.py  cli.py  config.py  db.py  logging_setup.py  status.py  throttle.py  x_staging.py
src/umphreys_vault/clients/: __init__.py  atu.py
src/umphreys_vault/etl/: __init__.py  aggregate.py  catalog.py  enrichment.py  orchestrator.py  shows.py  upserts.py
tests/: conftest.py
tests/fixtures/: atu_appearances.json  atu_jamcharts.json  atu_latest.json  atu_setlists_1998.json  atu_songs.json  atu_venues.json
tests/unit/: test_aggregate.py  test_cli.py  test_clients.py  test_config.py  test_ingest.py  test_orchestrator.py  test_shows.py  test_status.py  test_throttle.py  test_upserts.py  test_x_staging.py
