[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umphreys-vault"
version = "0.1.0"
description = "Postgres data vault + ETL for Umphrey's McGee setlists (All Things Umphreys API)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Pete Stergion" }]
keywords = ["umphreys-mcgee", "setlists", "etl", "postgres", "allthingsumphreys", "homelab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "asyncpg==0.31.0",
    "click==8.4.1",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.0",
    "python-dotenv==1.2.2",
    "uvicorn==0.46.0",
]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "respx==0.23.1",
    "ruff==0.15.12",
]

[project.scripts]
umphreys-vault = "umphreys_vault.cli:main"

[project.urls]
Homepage = "https://github.com/pete-builds/umphreys-vault"
Repository = "https://github.com/pete-builds/umphreys-vault"
Issues = "https://github.com/pete-builds/umphreys-vault/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
umphreys_vault = ["py.typed"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=umphreys_vault",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["umphreys_vault"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "S101", # asserts are fine in this codebase
    "S104", # binding 0.0.0.0 is intentional for the container
    "S608", # parameterized SQL through asyncpg, not f-string injection
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S311"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
mypy_path = ["src"]
files = ["src/umphreys_vault"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
